@@ -1,3 +1,12 @@
+2003-08-25  Scott Dattalo  <scott@dattalo.com>
+	* src/ioports.cc - more 16f628 Port A fixes
+	
+2003-08-19  Scott Dattalo  <scott@dattalo.com>
+	* eXdbm/parse.c - "char" is used to store result of fgetc, but
+			EOF doesn't fit in the default unsigned chars.
+	* src/cod.cc - an endian issue which made symbol values come out wrong.
+		- note these fixes came from a patch attached to an anonymous  bug report
+	
 2003-08-18  Scott Dattalo  <scott@dattalo.com>
 	* src/ioports.cc - Port A on the F62x devices was named "ioport"
 	* src/p16f62x.cc - intcon was not declared at 0x8b (bug 566165)
